--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Cinzel&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -8,12 +8,14 @@
 body {
   font-family: "Inter", serif;
 }
+.main {
+  font-family: "Inter", serif;
+}
 
 .logo {
   font-family: "Cinzel", serif;
 }
 
-.call{
+.call {
   font-family: "Raleway", serif;
-
 }
